# Mofeld

./: .gitignore  .gitmodules  CMakeLists.txt  M.rc  MOFELD_windows.pro  Mofeld.pro  README.md  defs.h  images.qrc  main.cpp  stylesheet.qrc
.github/workflows/: cmake.yml
BlofeldMgr/: arrangement.cpp  arrangement.h  blofchannel.cpp  blofchannel.h  blofeldreplica.cpp  blofeldreplica.h  contrainteparametre.cpp  contrainteparametre.h  instrument.cpp  instrument.h  itagable.cpp  itagable.h  mixpropparams.cpp  mixpropparams.h  parametre.cpp  parametre.h  patienteur.cpp  patienteur.h  propriete.cpp  propriete.h
MOFELD_PORTABLE/: CMakeLists.txt
MOFELD_PORTABLE/include/: BlofeldEnums.h  CtrlsImport.h  DefsWT.h  RtMidi.h  arpeggio.h  arpeggioslice.h  arpegiocommon.h  arrangement.h  arrangementmodel.h  arrangementvue.h  blofable.h  blofchannel.h  blofeldEditorVue.h  blofeldmultislice.h  blofeldmultivue.h  blofeldpersistencevue.h  blofeldreplica.h  blofeldwavetablemgrmodel.h  blofeldwavetablemodel.h  blofeldwindows.h  bufferspec.h  bytemanager.h  combotool.h  consequence.h  contrainteparametre.h  ctrlcomponent.h  ctrlcomposite.h  ctrlleaf.h  ctrlparamleaf.h  ctrlvalueleaf.h  defs.h  draggable.h  dspcontrol.h  dsphelper.h  dumpglobal.h  dumpinstrument.h  dumpmulti.h  dumpwave.h  easylist.h  entity.h  (+71 more)
MOFELD_PORTABLE/src/: BlofeldEnums.cpp  arpeggio.cpp  arpeggioslice.cpp  arpegiocommon.cpp  arrangement.cpp  arrangementmodel.cpp  arrangementvue.cpp  blofable.cpp  blofchannel.cpp  blofeldEditorVue.cpp  blofeldcommonmodel.cpp  blofeldmultislice.cpp  blofeldmultivue.cpp  blofeldpersistencevue.cpp  blofeldreplica.cpp  blofeldwavetablemgrmodel.cpp  blofeldwavetablemodel.cpp  blofeldwindows.cpp  bufferspec.cpp  bytemanager.cpp  consequence.cpp  contrainteparametre.cpp  ctrlcomponent.cpp  ctrlcomposite.cpp  ctrlparamleaf.cpp  ctrlvalueleaf.cpp  draggable.cpp  dspcontrol.cpp  dsphelper.cpp  dumpglobal.cpp  dumpinstrument.cpp  dumpmulti.cpp  dumpwave.cpp  easylist.cpp  entity.cpp  frmcommon.cpp  frmenveloppe.cpp  frmenveloppes.cpp  frmfilter.cpp  frmfilters.cpp  (+64 more)
Messaging/: blofable.cpp  blofable.h  bytemanager.cpp  bytemanager.h  consequence.cpp  dumpglobal.cpp  dumpglobal.h  dumpinstrument.cpp  dumpinstrument.h  dumpmulti.cpp  dumpmulti.h  dumpwave.cpp  dumpwave.h  messagewriter.cpp  messagewriter.h  parametrecom.cpp  parametrecom.h  replacer.h  requestglobal.cpp  requestglobal.h  requestinstrument.cpp  requestinstrument.h  requestmulti.cpp  requestmulti.h  requestwave.cpp  requestwave.h  sysexable.cpp  sysexable.h  transaction.h  wordchecksum.cpp  wordchecksum.h  wordwriter.cpp  wordwriter.h
Midi/: miomgr.cpp  miomgr.h  synthtransaction.h
SignalProc/: bufferspec.cpp  bufferspec.h
Time/: patienteur.h
client/Common/: ctrlcomponent.cpp  ctrlcomponent.h  ctrlcomposite.cpp  ctrlcomposite.h  ctrlleaf.h  ctrlparamleaf.cpp  ctrlparamleaf.h  ctrlvalueleaf.cpp  ctrlvalueleaf.h  keybordobs.h
client/Common/ctrlBasics/: CtrlsImport.h  frmsynthctrl_combobox.cpp  frmsynthctrl_combobox.h  frmsynthctrl_latchbutton.cpp  frmsynthctrl_latchbutton.h  frmsynthctrl_rotary.cpp  frmsynthctrl_rotary.h  frmsynthctrl_sliderh.cpp  frmsynthctrl_sliderh.h
client/Models/: arrangementmodel.cpp  arrangementmodel.h  blofeldcommonmodel.cpp  instrumentmodel.cpp  instrumentmodel.h  operationModel.h  proprietemodel.cpp  proprietemodel.h  wtmodel.cpp  wtmodel.h
client/vues/: blofeldEditorVue.cpp  blofeldEditorVue.h  blofeldVue.cpp  blofeldmultivue.cpp  blofeldmultivue.h  blofeldpersistencevue.cpp  blofeldpersistencevue.h  blofeldwindows.cpp  blofeldwindows.h  guiBlofMainwindow.cpp  guiBlofMainwindow.h  parametrereaction.h
client/vues/blofeld/groups/: arpeggio.cpp  arpeggio.h  frmenveloppes.cpp  frmenveloppes.h  frmfilters.cpp  frmfilters.h  frmfxs.cpp  frmfxs.h  frmgenerators.cpp  frmgenerators.h  frmlfos.cpp  frmlfos.h  frmmatrix.cpp  frmmatrix.h  frmmodifiers.cpp  frmmodifiers.h
client/vues/blofeld/multi/: blofeldmultislice.cpp  blofeldmultislice.h
client/vues/blofeld/parts/: arpeggioslice.cpp  arpeggioslice.h  arpegiocommon.cpp  arpegiocommon.h  frmcommon.cpp  frmcommon.h  frmenveloppe.cpp  frmenveloppe.h  frmfilter.cpp  frmfilter.h  frmfx.cpp  frmfx.h  frmlfo.cpp  frmlfo.h  frmmatrixslice.cpp  frmmatrixslice.h  frmmodifier.cpp  frmmodifier.h  frmosc.cpp  frmosc.h
client/vues/edition/: arrangementvue.cpp  arrangementvue.h  draggable.cpp  draggable.h  easylist.cpp  easylist.h  instrumentvue.cpp  instrumentvue.h  operationvue.cpp  operationvue.h  paramcontext.cpp  paramcontext.h  proprieteelementsvue.cpp  proprieteelementsvue.h  proprietevue.cpp  proprietevue.h  tagvue.cpp  tagvue.h  wavetableselectvue.cpp  wavetableselectvue.h
genericity/: BlofeldEnums.cpp  BlofeldEnums.h  combotool.h  entity.cpp  entity.h  entitydao.h  icategorizable.cpp  icategorizable.h  midiutility.cpp  midiutility.h  synthenum.cpp  synthenum.h  synthenumelement.cpp  synthenumelement.h  valuemgr.cpp  valuemgr.h  valuerange.cpp  valuerange.h
qss/: coffee.qss  pagefold.qss
res/qss/: pagefold.qss
wtDrawer_LIB/: DefsWT.h  WTDrawer.pro  blofeldwavetablemgrmodel.cpp  blofeldwavetablemgrmodel.h  blofeldwavetablemodel.cpp  blofeldwavetablemodel.h  dspcontrol.cpp  dspcontrol.h  dsphelper.cpp  dsphelper.h  irealsignal.cpp  irealsignal.h  mcolorhelper.cpp  mcolorhelper.h  mdrawer.cpp  mdrawer.h  mdrawerfrequency.cpp  mdrawerfrequency.h  mdrawertime.cpp  mdrawertime.h  mgeometry.h  msoundprintervue.cpp  mwavetableeditor.cpp  mwteditorcommonview.h  signalreal.cpp  signalreal.h  sliceofrequency.cpp  sliceofrequency.h  sliceotime.cpp  sliceotime.h  uiwavetablemgrvue.cpp  uiwavetablemgrvue.h  wavedrawerslice.cpp  wavedrawerslice.h  window.cpp  window.h
