set(_libName MOFELD_LIB)
#add_library(${_libName} )

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui)


include_directories(
    include
    src
    )


add_executable(MOFELD_PORTABLE
    src/main.cpp
    src/arpeggio.cpp
    src/arpeggioslice.cpp
    src/arpegiocommon.cpp
    src/arrangement.cpp
    src/arrangementmodel.cpp
    src/arrangementvue.cpp
    src/blofable.cpp
    src/blofchannel.cpp
    src/blofeldcommonmodel.cpp
    src/blofeldEditorVue.cpp
    src/BlofeldEnums.cpp
    src/blofeldmultislice.cpp
    src/blofeldmultivue.cpp
    src/blofeldpersistencevue.cpp
    src/blofeldreplica.cpp
    src/blofeldwavetablemgrmodel.cpp
    src/blofeldwavetablemodel.cpp
    src/blofeldwindows.cpp
    src/bufferspec.cpp
    src/bytemanager.cpp
    src/consequence.cpp
    src/contrainteparametre.cpp
    src/ctrlcomponent.cpp
    src/ctrlcomposite.cpp
    src/ctrlparamleaf.cpp
    src/ctrlvalueleaf.cpp
    src/draggable.cpp
    src/dspcontrol.cpp
    src/dsphelper.cpp
    src/dumpglobal.cpp
    src/dumpinstrument.cpp
    src/dumpmulti.cpp
    src/dumpwave.cpp
    src/easylist.cpp
    src/entity.cpp
    src/frmcommon.cpp
    src/frmenveloppe.cpp
    src/frmenveloppes.cpp
    src/frmfilter.cpp
    src/frmfilters.cpp
    src/frmfx.cpp
    src/frmfxs.cpp
    src/frmgenerators.cpp
    src/frmlfo.cpp
    src/frmlfos.cpp
    src/frmmatrix.cpp
    src/frmmatrixslice.cpp
    src/frmmodifier.cpp
    src/frmmodifiers.cpp
    src/frmosc.cpp
    src/frmsynthctrl_combobox.cpp
    src/frmsynthctrl_latchbutton.cpp
    src/frmsynthctrl_rotary.cpp
    src/frmsynthctrl_sliderh.cpp
    src/guiBlofMainwindow.cpp
    src/icategorizable.cpp
    src/imageprovider.cpp
    src/instrument.cpp
    src/instrumentmodel.cpp
    src/instrumentvue.cpp
    src/irealsignal.cpp
    src/itagable.cpp
    src/keybordobs.cpp
    src/mcolorhelper.cpp
    src/mdrawer.cpp
    src/mdrawerfrequency.cpp
    src/mdrawertime.cpp
    src/messagewriter.cpp
    src/mgeometry.cpp
    src/midiutility.cpp
    src/miomgr.cpp
    src/mixpropparams.cpp
    src/msoundprintervue.cpp
    src/mwavetableeditor.cpp
    src/mwteditorcommonview.cpp
    src/operationvue.cpp
    src/paramcontext.cpp
    src/parametre.cpp
    src/parametrecom.cpp
    src/patienteur.cpp
    src/propriete.cpp
    src/proprieteelementsvue.cpp
    src/proprietemodel.cpp
    src/proprietevue.cpp
    src/replacer.cpp
    src/requestglobal.cpp
    src/requestinstrument.cpp
    src/requestmulti.cpp
    src/requestwave.cpp
    src/RtMidi.cpp
    src/runguard.cpp
    src/signalreal.cpp
    src/synthenum.cpp
    src/synthenumelement.cpp
    src/synthtransaction.cpp
    src/sysexable.cpp
    src/tagvue.cpp
    src/timemaster.cpp
    src/transaction.cpp
    src/uiwavetablemgrvue.cpp
    src/valuemgr.cpp
    src/valuerange.cpp
    src/wavetableselectvue.cpp
    src/window.cpp
    src/wordchecksum.cpp
    src/wordwriter.cpp
    src/wtmodel.cpp


    include/arpeggio.h
    include/arpeggioslice.h
    include/arpegiocommon.h
    include/arrangement.h
    include/arrangementmodel.h
    include/arrangementvue.h
    include/blofable.h
    include/blofchannel.h
    include/blofeldEditorVue.h
    include/BlofeldEnums.h
    include/blofeldmultislice.h
    include/blofeldmultivue.h
    include/blofeldpersistencevue.h
    include/blofeldreplica.h
    include/blofeldwavetablemgrmodel.h
    include/blofeldwavetablemodel.h
    include/blofeldwindows.h
    include/bufferspec.h
    include/bytemanager.h
    include/combotool.h
    include/consequence.h
    include/contrainteparametre.h
    include/ctrlcomponent.h
    include/ctrlcomposite.h
    include/ctrlleaf.h
    include/ctrlparamleaf.h
    include/CtrlsImport.h
    include/ctrlvalueleaf.h
    include/defs.h
    include/DefsWT.h
    include/draggable.h
    include/dspcontrol.h
    include/dsphelper.h
    include/dumpglobal.h
    include/dumpinstrument.h
    include/dumpmulti.h
    include/dumpwave.h
    include/easylist.h
    include/entity.h
    include/entitydao.h
    include/frmcommon.h
    include/frmenveloppe.h
    include/frmenveloppes.h
    include/frmfilter.h
    include/frmfilters.h
    include/frmfx.h
    include/frmfxs.h
    include/frmgenerators.h
    include/frmlfo.h
    include/frmlfos.h
    include/frmmatrix.h
    include/frmmatrixslice.h
    include/frmmodifier.h
    include/frmmodifiers.h
    include/frmosc.h
    include/frmsynthctrl_combobox.h
    include/frmsynthctrl_latchbutton.h
    include/frmsynthctrl_rotary.h
    include/frmsynthctrl_sliderh.h
    include/guiBlofMainwindow.h
    include/icategorizable.h
    include/imageprovider.h
    include/instrument.h
    include/instrumentmodel.h
    include/instrumentvue.h
    include/irealsignal.h
    include/itagable.h
    include/keybordobs.h
    include/mcolorhelper.h
    include/mdrawer.h
    include/mdrawerfrequency.h
    include/mdrawertime.h
    include/messagewriter.h
    include/mgeometry.h
    include/midiutility.h
    include/miomgr.h
    include/mixpropparams.h
    include/msoundprintervue.h
    include/mwavetableeditor.h
    include/mwteditorcommonview.h
    include/operationModel.h
    include/operationvue.h
    include/paramcontext.h
    include/parametre.h
    include/parametrecom.h
    include/parametrereaction.h
    include/patienteur.h
    include/propriete.h
    include/proprieteelementsvue.h
    include/proprietemodel.h
    include/proprietevue.h
    include/replacer.h
    include/requestglobal.h
    include/requestinstrument.h
    include/requestmulti.h
    include/requestwave.h
    include/RtMidi.h
    include/runguard.h
    include/signalreal.h
    include/synthenum.h
    include/synthenumelement.h
    include/synthtransaction.h
    include/sysexable.h
    include/tagvue.h
    include/timemaster.h
    include/transaction.h
    include/uiwavetablemgrvue.h
    include/valuemgr.h
    include/valuerange.h
    include/wavetableselectvue.h
    include/window.h
    include/wordchecksum.h
    include/wordwriter.h
    include/wtmodel.h


    )


